Заменить хранение скриншотов платежей с Replit Object Storage (GCS sidecar) на прямое base64-хранение в Postgres
